--- a/progconcurrente/concurrente_teoria/stylesheets/stylesheet.css
+++ b/progconcurrente/concurrente_teoria/stylesheets/stylesheet.css
@@ -433,10 +433,11 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #666;
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+  background: #d8ddff;
 }
 
 p {
+text-align : justify;
   margin-top: 0;
 }
 
@@ -503,8 +504,7 @@ aside#sidebar {
   min-height: 504px;
   padding-left: 20px;
   font-size: 12px;
-  line-height: 1.3;
-  background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
+  line-height: 1.3; 
 }
 
 aside#sidebar p.repo-owner,
