--- a/proglogica/logica_teoria/css/style.css
+++ b/proglogica/logica_teoria/css/style.css
@@ -51,3 +51,13 @@ h3 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.mercury {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.marginimgs {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
